Archive2/26/47c21a6377d3ed/output
main.cpp:1:1: error: 'ACE_Get_Opt' does not name a type
 ACE_Get_Opt opt (argc, argv, e:i:));
 ^
main.cpp:2:1: error: expected unqualified-id before 'for'
 for (int c; (c = opt()) != -1;)
 ^
main.cpp:2:16: error: expected ')' before '=' token
 for (int c; (c = opt()) != -1;)
                ^
main.cpp:2:31: error: expected unqualified-id before ')' token
 for (int c; (c = opt()) != -1;)
                               ^
