Archive2/26/47c21a6377d3ed/main.cpp
ACE_Get_Opt opt (argc, argv, e:i:));
for (int c; (c = opt()) != -1;)
    switch (c) {
    'e': //...
        break;
    'i': //...
        break;
    }